# duatic_helpers

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml  repos.list  setup.cfg  setup.py
.github/workflows/: build-humble.yml  build-jazzy.yml  build-kilted.yml  build-lyrical.yml  build-rolling.yml  ci-pipeline.yml  ci.yml  pre-commit.yml  reusable_ici.yml
duatic_bt_executor/: CMakeLists.txt  package.xml
duatic_bt_executor/include/duatic_bt_executor/: skill_action_node.hpp
duatic_bt_executor/src/: bt_executor_node.cpp
duatic_common/: CMakeLists.txt  duatic_common-extras.cmake  package.xml
duatic_common/cmake/: duatic_package.cmake
duatic_common/duatic_common/launch/: __init__.py  has_node_params.py  launch_config_as_bool.py  launch_helper.py  replace_string.py  rewritten_yaml.py
duatic_common/duatic_common/test/: __init__.py
duatic_common/test/: test_launch_config_as_bool.py  test_rewritten_yaml.py
duatic_concurrency/: CMakeLists.txt  package.xml
duatic_concurrency/include/duatic_concurrency/: memory.hpp  unidirectional_buffer.hpp
duatic_concurrency/test/: test_memory.cpp  test_unidirectional_buffer.cpp
duatic_e_stop/: CMakeLists.txt  duatic_helpers-extras.cmake  package.xml  setup.cfg  setup.py
duatic_e_stop/duatic_e_stop/: brake_release_node.py  e_stop_node.py
duatic_e_stop/scripts/: e_stop_node
duatic_e_stop/test/: test_launch_config_as_bool.py  test_rewritten_yaml.py
duatic_helper_msgs/: CMakeLists.txt  package.xml
duatic_helper_msgs/srv/: GetJointStates.srv
duatic_helpers/: CMakeLists.txt  __init__.py  launch_helper.py  package.xml  test_helper.py
duatic_helpers/duatic_helpers/: __init__.py  duatic_controller_helper.py  duatic_jtc_helper.py  duatic_param_helper.py  duatic_pinocchio_helper.py  duatic_robots_helper.py  has_node_params.py  test_helper.py
duatic_helpers/src/: joint_state_provider_node.cpp
duatic_kinematics/: package.xml  requirements.txt  setup.cfg  setup.py
duatic_kinematics/duatic_kinematics/: __init__.py  pinocchio_solver.py  pyroki_solver.py  quaternion_utils.py  smoothing.py  trajectory_types.py  waypoint_generators.py
duatic_monitoring/: package.xml  setup.cfg  setup.py
duatic_monitoring/duatic_monitoring/: battery_aggregator_node.py  estop_error_logger_node.py  gamepad_battery_node.py  litime_battery_node.py  mock_battery_node.py
duatic_monitoring/test/: test_estop_error_logger.py
duatic_move_to_predefined_position/: CMakeLists.txt  package.xml  setup.cfg  setup.py
duatic_move_to_predefined_position/duatic_move_to_predefined_position/: move_to_predefined_position_node.py
duatic_move_to_predefined_position/scripts/: move_to_predefined_position_node
duatic_ros_helpers/: package.xml  setup.cfg  setup.py
duatic_ros_helpers/duatic_ros_helpers/: __init__.py  controller_helper.py  e_stop_node.py  joint_parking_node.py  jtc_helper.py  param_helper.py  robots_helper.py
install/: local_setup.sh  setup.sh
install/duatic_ros_helpers/share/duatic_ros_helpers/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
scans_merger/: CMakeLists.txt  package.xml
scans_merger/src/: scans_merger.cpp
