<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>duatic_bt_executor</name>
  <version>1.0.0</version>
  <description>BehaviorTree.CPP based mission executor for Duatic skills</description>

  <maintainer email="skaehler@duatic.com">Sven Kaehler</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>behaviortree_cpp</depend>
  <depend>duatic_skills_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
