<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>duatic_helpers</name>
  <version>0.0.0</version>
  <description>Reusable helpers</description>
  <maintainer email="skaehler@duatic.com">Sven Kähler</maintainer>
  <license>BSD 3-Clause</license>

  <exec_depend>launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
